# hack-with-AI

./: .flake8  .gitignore  README.md  app.py  config.example.json  config.example.yaml  config_manager.py  manifest.json  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup_config.py  slack_client.py  slackbot.py  test_integration.py  version.py
.slack/: config.json
listeners/: __init__.py  commands.py  events.py  messages.py
tests/: __init__.py  conftest.py  test_bot.py
